@@ -78,15 +78,6 @@ Certainty: certain
 Info: Manual pages have to be installed compressed (using "<tt>gzip -9</tt>").
 Ref: policy 12.1
 
-Tag: x11-games-should-be-in-usr-games
-Severity: important
-Certainty: certain
-Info: Since X11 games should be installed in <tt>/usr/games</tt> (and
- not in <tt>/usr/X11R6/bin</tt>) and the game's manual pages should be
- installed in <tt>/usr/share/man/man6</tt>, the directory
- <tt>/usr/X11R6/man/man6</tt> should be empty.
-Ref: policy 11.11
-
 Tag: manpage-not-compressed-with-gzip
 Severity: important
 Certainty: certain
@@ -182,28 +173,6 @@ Certainty: certain
 Info: This man page contains a section "POD ERRORS" generated by pod2man.
  This sections lists errors in the POD syntax found by pod2man during the
  generation of the man page.
-
-Tag: manpage-for-x11-binary-in-wrong-directory
-Severity: important
-Certainty: certain
-Info: Manual pages for binaries which are located in <tt>/usr/X11R6/bin</tt>
- should be installed below <tt>/usr/X11R6/man</tt>.
- .
- Note that normally only packages that are part of X itself and those that
- are using some arcane Imakefiles should actually install binaries into
- <tt>/usr/X11R6/bin</tt>.
-Ref: fhs usrsharemanmanualpages
-
-Tag: manpage-for-non-x11-binary-in-wrong-directory
-Severity: important
-Certainty: certain
-Info: Manual pages for binaries that are not located in <tt>/usr/X11R6/bin</tt>
- should not be installed below <tt>/usr/X11R6/man</tt>, but below
- <tt>/usr/share/man</tt>.
- .
- Note that moving a binary into <tt>/usr/X11R6/bin</tt> is almost never the
- proper solution for this problem; move the manual page instead.
-Ref: fhs usrsharemanmanualpages
 
 Tag: bad-so-link-within-manual-page
 Severity: important
