@@ -20,4 +20,3 @@ Test-For:
  manpage-not-compressed-with-max-compression
  manpage-section-mismatch
  spelling-error-in-manpage
- x11-games-should-be-in-usr-games
