@@ -1,14 +1,12 @@
 E: manpages-general: bad-link-to-undocumented-manpage usr/share/man/man1/sbin-binary.1.gz
-E: manpages-general: empty-manual-page usr/X11R6/man/man6/X11R6-binary.man
 E: manpages-general: empty-manual-page usr/share/man/de/man1/binary-without-english-manpage.1
 E: manpages-general: empty-manual-page usr/share/man/man1/usr-bin-binary-alt.1.gz
 E: manpages-general: empty-manual-page usr/share/man/man1/usr-bin-binary.1
 E: manpages-general: empty-manual-page usr/share/man/man1/usr-sbin-binary.1.gz
 E: manpages-general: empty-manual-page usr/share/man/man6/usr-games-binary.6.gz
-E: manpages-general: manpage-has-wrong-extension usr/X11R6/man/man6/X11R6-binary.man
+E: manpages-general: manpage-has-wrong-extension usr/share/man/man6/simple.pod.gz
 E: manpages-general: manpage-is-dh_make-template usr/X11R6/man/man1/rstartd.1x.gz
 E: manpages-general: manpage-is-dh_make-template usr/share/man/man1/program.1.gz
-E: manpages-general: manpage-not-compressed usr/X11R6/man/man6/X11R6-binary.man
 E: manpages-general: manpage-not-compressed usr/share/man/de/man1/binary-without-english-manpage.1
 E: manpages-general: manpage-not-compressed usr/share/man/man1/usr-bin-binary.1
 E: manpages-general: manpage-not-compressed-with-gzip usr/share/man/man1/usr-bin-binary-alt.1.gz
@@ -18,11 +16,8 @@ E: manpages-general: package-installs-file-to-usr-x11r6 usr/X11R6/
 E: manpages-general: package-installs-file-to-usr-x11r6 usr/X11R6/man/
 E: manpages-general: package-installs-file-to-usr-x11r6 usr/X11R6/man/man1/
 E: manpages-general: package-installs-file-to-usr-x11r6 usr/X11R6/man/man1/rstartd.1x.gz
-E: manpages-general: package-installs-file-to-usr-x11r6 usr/X11R6/man/man6/
-E: manpages-general: package-installs-file-to-usr-x11r6 usr/X11R6/man/man6/X11R6-binary.man
 E: manpages-general: package-installs-file-to-usr-x11r6-bin usr/X11R6/bin/
 E: manpages-general: package-installs-file-to-usr-x11r6-bin usr/X11R6/bin/rstartd
-E: manpages-general: x11-games-should-be-in-usr-games usr/X11R6/man/man6/X11R6-binary.man
 I: manpages-general: hyphen-used-as-minus-sign usr/share/man/man3/include.3.gz:11
 I: manpages-general: hyphen-used-as-minus-sign usr/share/man/man3/include.3.gz:12
 I: manpages-general: hyphen-used-as-minus-sign usr/share/man/man3/include.3.gz:13
@@ -35,7 +30,6 @@ W: manpages-general: gz-file-not-gzip usr/share/man/man1/usr-bin-binary-alt.1.gz
 W: manpages-general: gz-file-not-gzip usr/share/man/man1/usr-sbin-binary.1.gz
 W: manpages-general: link-to-undocumented-manpage usr/share/man/man1/bin-binary.1.gz
 W: manpages-general: link-to-undocumented-manpage usr/share/man/man3/function.3.gz
-W: manpages-general: manpage-has-bad-whatis-entry usr/X11R6/man/man6/X11R6-binary.man
 W: manpages-general: manpage-has-bad-whatis-entry usr/share/man/man1/usr-bin-binary-alt.1.gz
 W: manpages-general: manpage-has-bad-whatis-entry usr/share/man/man1/usr-bin-binary.1
 W: manpages-general: manpage-has-bad-whatis-entry usr/share/man/man1/usr-sbin-binary.1.gz
@@ -46,3 +40,4 @@ W: manpages-general: manpage-has-errors-from-pod2man usr/share/man/man1/test.1p.
 W: manpages-general: manpage-has-useless-whatis-entry usr/share/man/man1/true.1.gz
 W: manpages-general: manpage-locale-dir-country-specific usr/share/man/de_DE/man1/test-utf8-chars.1p.gz
 W: manpages-general: manpage-section-mismatch usr/X11R6/man/man1/rstartd.1x.gz:5 1x != 1
+W: manpages-general: manpage-section-mismatch usr/share/man/man6/simple.pod.gz:127 pod != 6
