@@ -1,4 +1,4 @@
-all: pecho.1.gz jecho jecho.1 zecho.1.gz
+all: pecho.1.gz zecho.1.gz
 
 %.gz: %
 	gzip --best $<
@@ -6,9 +6,9 @@ all: pecho.1.gz jecho jecho.1 zecho.1.gz
 %.1: %
 	pod2man --section 1  $< > $@
 
-jecho zecho: pecho
+zecho: pecho
 	sed s/$</$@/g $< > $@
 	chmod 0755 $@
 
 clean:
-	rm -f pecho.1.gz jecho jecho.1 zecho*
+	rm -f pecho.1.gz zecho*
